--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
           </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section --
+    </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Us Section ======= -->
     <section id="contact" class="contact">
@@ -479,7 +479,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>주소</h3>
-              <p>대전광역시 대덕구 문평서로18번길 15</p>
+              <p>대구광역시 북구 산격동 1265-39</p>
             </div>
           </div>
 
