--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>RYO KOREA</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="RYO KOREA" name="descriptison">
+  <meta content="알와이오코리아" name="keywords">
+  
+ <meta property="og:type" content="website"> 
+ <meta property="og:title" content="알와이오코리아">
+ <meta property="og:description" content="RYO KOREA 알와이오코리아">
+ <meta property="og:url" content="http://www.ryokorea.com">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
